tests/integration/snapshots/integration__conformance__y_string_unicode_u+fffe_nonchar.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uFFFE"]
stdout ---
[
    "\uFFFE"
]

stderr ---
