tests/integration/snapshots/integration__conformance__y_string_with_del_character.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["aa"]
stdout ---
["aa"]

stderr ---
