tests/integration/snapshots/integration__conformance__y_string_with_del_character.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
["aa"]
stderr ---
